--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="container my-2">
-    <h2>Product' List</h2>
+    <h2>Product List</h2>
     <a th:href="@{/product/create}" class="btn btn-primary btn-sm mb-3">Create Product</a>
 
     <table border="1" class="table table-striped table-responsive-md">
@@ -20,8 +20,8 @@
         </thead>
         <tbody>
         <tr th:each="product: ${products}">
-            <td th:text="${product.productName}"></td>
-            <td th:text="${product.productQuantity}"></td>
+            <td class="product-name" th:text="${product.productName}"></td>
+            <td class="product-quantity" th:text="${product.productQuantity}"></td>
             <td>
                 <a th:href="@{/product/edit/{id}(id=${product.productId})}" 
                    class="btn btn-warning btn-sm">Edit</a>
